<resources>
    <string name="app_name">ampaMain</string>
    <string name="logo"> LOGO AMPA COMPLEJO DEPORTIVO </string>

    <string name="btnLogin">Iniciar Sesión</string>
    <string name="btnInscripcion">Inscribirse</string>
    <string name="btnReservar">Reservar</string>
    <string name="btnCancelReservar">Cancelar Reserva</string>
    <string name="btnReproducir">Reproducir</string>
    <string name="btnEditar">Editar</string>

    <string name="btnGuardar">Guardar</string>

    <string name="RutinaTitulo">Titulo Rutina</string>
    <string name="RutinaDesc">Descripción Rutina</string>

    <string name="RutinaImg">Imagen de Rutina</string>

    <string name="TorneoImg">Imagen de Torneo</string>
    <string name="TorneoTitulo">Titulo de Torneo</string>
    <string name="TorneoDesc">Descripción de Torneo</string>


    <string name="PasswordActual">Contraseña Actual</string>
    <string name="PasswordNew">Nueva Contraseña</string>
    <string name="HintPasswordChange1">Ingrese su contraseña actual</string>

    <string name="Email">Email</string>
    <string name="Password">Contraseña</string>
    <string name="RepitaPassword">Repita su Contraseña</string>

    <string name="Fecha">Fecha</string>
    <string name="Hora">Hora</string>

    <string name="ImgInstalacion">Imagen Instalación</string>

    <string name="ImgTorneo">Imagen Torneo</string>
    <string name="ImgRutina">Imagen Rutina</string>

    <string name="NombreInstalacion">Nombre Instalación</string>
    <string name="DescInstalacion">Descripción Instalación</string>
    <string name="CostoInstalacion">Costo Instalación</string>

    <string name="PlaceholderEmail">Ingrese su Email</string>
    <string name="AnchorRegister">¿No tienes cuenta?</string>
    <string name="Registrarse">Registrarse</string>
    <string name="PlaceholderPassword">Ingrese su Contraseña</string>

    <string name="PlaceholderPasswordRepeat">Repita su Contraseña</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_change_password">Cambiar Contraseña</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_credencial">Credencial</string>
    <string name="NombreApellido">Nombre y Apellido</string>
    <string name="IngreseNombreApellido">Ingrese Nombre y Apellido</string>

    <string name="ImagenPerfil">Imagen de Perfil</string>
    <string name="qr">Código QR</string>
    <string name="IconCambiarImg">Cambiar imagen de perfil</string>


    <string name="UID">UID</string>



    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registro">Registro</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="changepass">CAMBIAR CONTRASEÑA</string>
    <string name="changepassNueva">Nueva Contraseña</string>
    <string name="changepassRepita">Repetir Nueva Contraseña</string>

    <!-- Strings used for fragments Contact-->
    <string name="nombre">Nombre</string>
    <string name="emailC">Email</string>
    <string name="mensaje">Mensaje</string>
    <string name="PlaceholderMensaje">Deje su mensaje</string>
    <string name="PlaceholderNombre">Ingrese su nombre</string>
    <string name="botonEnviar">Enviar</string>
    <string name="menu_dni">Ingrese su dni</string>
    <string name="dni">DNI</string>
    <string name="menu_email">Ingrese su email</string>
    <string name="menu_registrar">REGISTRAR</string>
    <string name="boton_mensajeContacto">Enviar mensaje</string>
    <string name="placeholder_mensajeContacto">Escriba aquí su mensaje</string>
</resources>