<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/user_icon"
            android:title="@string/menu_perfil" />

        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/setting_icon"
            android:title="@string/menu_change_password" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/contacto_icon"
            android:title="@string/menu_contacto" />
        <item
            android:id="@+id/nav_credencial"
            android:icon="@drawable/credential_icon"
            android:title="@string/menu_credencial" />
    </group>
</menu>