<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/logo"
                android:cropToPadding="true"
                app:srcCompat="@drawable/logocrop" />

            <TextView
                android:id="@+id/labelEmail_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/Email"
                android:labelFor="@id/inputEmail_Registro"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail_registro_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail_Registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:ems="10"
                    android:hint="@string/PlaceholderEmail"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/labelNombre_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/NombreApellido"
                android:labelFor="@id/inputNombre_Registro"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNombre_registro_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNombre_Registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:ems="10"
                    android:hint="@string/IngreseNombreApellido"
                    android:inputType="text"

                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/labelPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/Password"
                android:labelFor="@id/inputPassword1_registro"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword_register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword1_registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/PlaceholderPassword"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/labelPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/RepitaPassword"
                android:labelFor="@id/inputPassword2_registro"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword2_register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword2_registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/PlaceholderPassword"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btn_registrar_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"

                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/menu_registrar"
                android:textAlignment="center"/>




        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

